Did calculations on my overall dataset and added markdown boxes

--- a/Capstone Code.ipynb
+++ b/Capstone Code.ipynb
@@ -38,6 +38,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The code below moved my csv files in to actual dataframes for my code to read"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -83,6 +90,13 @@
     "\n",
     "df1 = pd.read_csv('CNBC NFL Franchise Values.csv')\n",
     "print(df1.head())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The code below removed columns that I was not wanting to report on or didn't add any value to my project"
    ]
   },
   {
@@ -172,8 +186,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The code below allowed me to display my combined dataframe in to more coherent manner for reading"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -255,12 +276,43 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "\n"
+    "The below code is used to convert the values in the \"Value\" column to numerical values.  I then proceeded to perform a couple of calculations to give the user an idea of what they are looking at from an overall perspective"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The Median Value for these franchises is: 4325000000.0\n",
+      "The Mean Value for these franchises is: 4658333333.333333\n",
+      "The Standard Derivation for these franchises is: 1.9989798850574717e+18\n"
+     ]
+    }
+   ],
+   "source": [
+    "def convert_to_numeric(value):\n",
+    "    value = value.replace('$', '').replace('B', '')\n",
+    "    return float(value) * 1e9\n",
+    "df['Value'] = df['Value'].apply(convert_to_numeric)\n",
+    "median_value = df['Value'].median()\n",
+    "\n",
+    "print(f\"The Median Value for these franchises is: {median_value}\")\n",
+    "\n",
+    "mean_value = df['Value'].mean()\n",
+    "\n",
+    "print(f\"The Mean Value for these franchises is: {mean_value}\")\n",
+    "\n",
+    "Variance_value = df['Value'].var()\n",
+    "\n",
+    "print(f\"The Standard Derivation for these franchises is: {Variance_value}\")\n"
    ]
   }
  ],
